# Capstone-2023

./: .gitignore  Linearization_picar_capstone.mlx  README.md  Week 1 Meeting Notes.doc  matlab_matrix.mat
.obsidian/: graph.json  workspace.json
Capstone-Docs/: Actuators.md  Alpha-Beta-Gamma Filter.md  Bus Communication Protocols.md  Car Components.md  Continuous Integration.md  Controller and Estimator Design.md  Design Overview.md  Encoder node.md  Estimators.md  Feedback Systems.md  I2C.md  IMU Publisher.md  Landing.md  MPU6050 Setup.md  Modelling and Simulation.md  Navigation Design.md  Numpy.md  PiCar Modelling and Simulation.md  PiTop Redesign Notes.md  Project Description.md  Project Timeline.md  ROS2.md  RPM Publisher.md  SLAM.md  Sensor SetUp.md  Sensors & Electronics.md  Sensors.md  Study Section.md  System Identification.md  System Modeling.md  To Delete Later.md
Capstone-Docs/.obsidian/: graph.json  workspace.json
Capstone-Docs/Documents/: Capstone Timeline.xlsx
Capstone-Docs/Modeling & Coding Notes/: Bus Communication Protocols.md  Controller and Estimator Design.md  Custom .msg files.md  GPS Node.md  I2C.md  IMU Publisher.md  Kalman Filter node.md  MPU6050 Configuration.md  Navigation Design.md  Outdoor Testing.md  PID controller nodes.md  PID controllers.md  PiCar Modelling and Simulation.md  Python Notes.md  RPM Publisher.md  Sensor SetUp.md
Capstone-Docs/Physical Components/: Sensors & Electronics.md  System Identification.md
Capstone-Docs/Progress Reports/: Week 1 Meeting Notes.doc  Week 2 Meeting Notes.doc  Week 3 Meeting Notes.doc
Capstone-Docs/Study Topics/: Actuators.md  Estimators.md  Extended Kalman Filter.md  Feedback Loops.md  Feedback Systems.md  Kalman Filter.md  Linux Command Line.md  ROS2.md  Robot_Localization Package.md  SLAM.md  Sensor Fusion Notes.md  Sensor Fusion.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
picar_ros2_ws/src/matlab_msg_gen/win64/src/tutorial_interfaces/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
picar_ros2_ws/src/matlab_msg_gen/win64/src/tutorial_interfaces/include/tutorial_interfaces/: visibility_control.h
picar_ros2_ws/src/matlab_msg_gen/win64/src/tutorial_interfaces/m/+ros/+internal/+ros2/+custommessages/+tutorial_interfaces/: gPS.m  poseSetpoint.m  rPM.m  tutorial_interfaces_msg_PoseSetpoint_1To2_Converter.m  tutorial_interfaces_msg_PoseSetpoint_2To1_Converter.m  tutorial_interfaces_msg_RPM_2To1_Converter.m  tutorial_interfaces_msg_VelSetpoint_1To2_Converter.m  tutorial_interfaces_msg_VelSetpoint_2To1_Converter.m  tutorial_interfaces_msg_XFiltered_2To1_Converter.m  tutorial_interfaces_msg_YawFiltered_1To2_Converter.m  tutorial_interfaces_msg_YawFiltered_2To1_Converter.m  velSetpoint.m  xFiltered.m  yFiltered.m  yawFiltered.m
picar_ros2_ws/src/matlab_msg_gen/win64/src/tutorial_interfaces/msg/: RPM.msg  YFiltered.msg
picar_ros2_ws/src/matlab_msg_gen/win64/src/tutorial_interfaces/src/: tutorial_interfaces_GPS_message.cpp  tutorial_interfaces_PoseSetpoint_message.cpp  tutorial_interfaces_RPM_message.cpp  tutorial_interfaces_VelSetpoint_message.cpp  tutorial_interfaces_XFiltered_message.cpp  tutorial_interfaces_YFiltered_message.cpp  tutorial_interfaces_YawFiltered_message.cpp
(+430 files in other folders)
